added donate button

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <div class="container">
  <header>
   <div class="container">
-    <div id="logo"><img src="images/buoy-logo-horizontal.svg" alt="buoy"></div>
+    <div id="logo"><a href="index.html"><img src="images/buoy-logo-horizontal.svg" alt="buoy"></a></div>
     <button class="hamburger" aria-label="Toggle Menu">
       <span></span>
       <span></span>
@@ -56,11 +56,17 @@
           </a>
         </li>
         <li>
-          <a id="contact-link" href="mailto:support&#64;buoybitcoin.com">
-        <img src="images/contact.svg" alt="Contact Icon"/>
-        Contact
-        </a>
+          <a href="#donate" id="donate-link">
+            <img src="images/lightning.svg" alt="Donate Icon" />
+            Donate
+          </a>
         </li>
+        <li>
+          <a id="contact-link" href="mailto:support&#64;buoybitcoin.com">
+            <img src="images/contact.svg" alt="Contact Icon"/>
+            Contact
+          </a>
+        </li>        
       </ul>
     </section>
   </div>
