--- a/index.html
+++ b/index.html
@@ -55,11 +55,17 @@
           </a>
         </li>
         <li>
-        <a id="contact-link" href="mailto:support&#64;buoybitcoin.com">
-        <img src="images/contact.svg" alt="Contact Icon"/>
-        Contact
-        </a>
+          <a href="#donate" id="donate-link">
+            <img src="images/lightning.svg" alt="Donate Icon" />
+            Donate
+          </a>
         </li>
+        <li>
+          <a id="contact-link" href="mailto:support&#64;buoybitcoin.com">
+            <img src="images/contact.svg" alt="Contact Icon"/>
+            Contact
+          </a>
+        </li>        
       </ul>
     </section>
   </div>
