--- a/service.html
+++ b/service.html
@@ -50,17 +50,24 @@
           </a>
         </li>
         <li>
-          <a href="faq.html">
-            <img src="images/faq.svg" alt="FAQ Icon" />
-            FAQ
-          </a>
-        </li>
-        <li>
-          <a id="contact-link" href="mailto:support&#64;buoybitcoin.com">
-        <img src="images/contact.svg" alt="Contact Icon"/>
-        Contact
-        </a>
-        </li>
+  <a href="faq.html">
+    <img src="images/faq.svg" alt="FAQ Icon" />
+    FAQ
+  </a>
+</li>
+<li>
+  <a href="#donate" id="donate-link">
+    <img src="images/lightning.svg" alt="Donate Icon" />
+    Donate
+  </a>
+</li>
+<li>
+  <a id="contact-link" href="mailto:support&#64;buoybitcoin.com">
+    <img src="images/contact.svg" alt="Contact Icon"/>
+    Contact
+  </a>
+</li>
+
       </ul>
     </section>
   </div>
