description collapses at 200 characters + donate codex update

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
     </section>
 
-    <!-- Pay & Receive Section -->
+    <!-- Spending Wallets Section -->
     <section class="category">
 	<div class="category-header">
       <h2><a href="spending-wallets.html">Spending Wallets</a></h2>
