Headline and category buttons

--- a/index.html
+++ b/index.html
@@ -74,8 +74,31 @@
 </header>
 <section class="hero-headline animated-headline">
   <h1>Find your way into Bitcoin – Fast</h1>
+  <p class="hero-subheadline">Simple comparisons. No crypto noise.</p>
 </section>
-  <main>
+
+<section class="action-grid">
+  <h2>What do you want to do with Bitcoin?</h2>
+  <div class="action-buttons">
+    <button class="action-button" data-target="purchase-bitcoin">
+      Buy Bitcoin
+    </button>
+    <button class="action-button" data-target="pay-receive-bitcoin">
+      Spend Bitcoin
+    </button>
+    <button class="action-button" data-target="store-bitcoin">
+      Store it safely
+    </button>
+    <button class="action-button" data-target="node-section">
+      Run my own node
+    </button>
+    <button class="action-button" data-target="merchant-section">
+      Accept Bitcoin as a merchant
+    </button>
+  </div>
+</section>
+
+<main>
     <!-- Buy Bitcoin Section -->
     <section class="category">
      <div class="category-header">
@@ -95,10 +118,10 @@
       </div>
     </section>
 
-    <!-- Spending Wallets Section -->
+    <!-- Spend Bitcoin Section -->
     <section class="category">
 	<div class="category-header">
-      <h2><a href="spending-wallets.html">Spending Wallets</a></h2>
+      <h2><a href="spending-wallets.html">Spend Bitcoin</a></h2>
 	  <button class="compare-btn" disabled>compare</button>
 	</div>
    	  <div class="scrollable-container" id="pay-receive-bitcoin">
@@ -109,10 +132,10 @@
       </div>
     </section>
 
-    <!-- Saving Bitcoin Section -->
+    <!-- Store Safely Section -->
     <section class="category">
 	 <div class="category-header">
-   <h2><a href="saving-wallets.html">Saving Wallets</a></h2>
+   <h2><a href="saving-wallets.html">Store it safely</a></h2>
 	  <button class="compare-btn" disabled>compare</button>
 	 </div>
     	<div class="scrollable-container" id="store-bitcoin">
@@ -122,13 +145,13 @@
       </div>
     </section>
 	  
-	      <!-- Financial Tools Section -->
+	      <!-- Run Node Section -->
     <section class="category">
 	 <div class="category-header">
-   <h2><a href="financial-tools.html">Financial Tools</a></h2>
+   <h2><a href="financial-tools.html">Run my own node</a></h2>
 	  <button class="compare-btn" disabled>compare</button>
 	 </div>
-      <div class="scrollable-container">
+      <div class="scrollable-container" id="node-section">
 		<div class="card"><img src="images/fold.svg" alt="fold" class="svg-icon"><span></span></div>
         <div class="card"><img src="images/unchained.svg" alt="unchained" class="svg-icon"><span></span></div>
         <div class="card"><img src="images/anchorwatch.svg" alt="anchorwatch" class="svg-icon"><span></span></div>
@@ -137,13 +160,13 @@
       </div>
     </section>
 	  
-	<!-- Merchants -->
+	<!-- Merchant Section -->
     <section class="category">
 	 <div class="category-header">
-    <h2><a href="merchants.html">Merchant Tools</a></h2>
+    <h2><a href="merchants.html">Accept Bitcoin as a merchant</a></h2>
 	  <button class="compare-btn" disabled>compare</button>
 	 </div>
-      <div class="scrollable-container">
+      <div class="scrollable-container" id="merchant-section">
         <div class="card"><img src="images/btc-pay.svg" alt="BTC pay" class="svg-icon"><span></span></div>
 		    <div class="card"><img src="images/opennode.svg" alt="opennode" class="svg-icon"><span></span></div>
         <div class="card"><img src="images/lightspark.svg" alt="lightspark" class="svg-icon"><span></span></div>
