search function index.html

--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
   <p class="hero-subheadline">Simple comparisons. No crypto noise.</p>
 </section>
 
+<section class="main-search">
+  <div class="search-wrapper-main">
+    <input type="text" placeholder="Search services, wallets, or features..." id="main-search" autocomplete="off" />
+    <button id="main-search-btn">
+      <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+    </button>
+    <div id="main-search-suggestions" class="search-suggestions"></div>
+  </div>
+</section>
+
 <section class="action-grid">
   <h2>What do you want to do with Bitcoin?</h2>
   <div class="action-buttons">
@@ -90,7 +102,7 @@
       Store it safely
     </button>
     <button class="action-button" data-target="node-section">
-      Run my own node
+      Invest it
     </button>
     <button class="action-button" data-target="merchant-section">
       Accept Bitcoin as a merchant
@@ -148,7 +160,7 @@
 	      <!-- Run Node Section -->
     <section class="category">
 	 <div class="category-header">
-   <h2><a href="financial-tools.html">Run my own node</a></h2>
+   <h2><a href="financial-tools.html">Invest it</a></h2>
 	  <button class="compare-btn" disabled>compare</button>
 	 </div>
       <div class="scrollable-container" id="node-section">
