Run your own node, mobile icon display, key "interface" and other sublabels, compare button design

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       Store it safely
     </button>
     <button class="action-button" data-target="node-section">
-      Invest it
+      Run my own node
     </button>
     <button class="action-button" data-target="merchant-section">
       Accept Bitcoin as a merchant
@@ -141,6 +141,7 @@
         <div class="card"><img src="images/aqua.svg" alt="aqua" class="svg-icon"><span></span></div>
         <div class="card"><img src="images/phoenix.svg" alt="phoenix" class="svg-icon"><span></span></div>
         <div class="card"><img src="images/muun.svg" alt="muun" class="svg-icon"><span></span></div>
+        <div class="card"><img src="images/fold.svg" alt="fold" class="svg-icon"><span></span></div>
       </div>
     </section>
 
@@ -154,21 +155,21 @@
     <div class="card"><img src="images/bitkey.svg" alt="bitkey" class="svg-icon"><span></span></div>
 		<div class="card"><img src="images/wasabi.svg" alt="wasabi" class="svg-icon"><span></span></div>
 		<div class="card"><img src="images/sparrow.svg" alt="sparrow" class="svg-icon"><span></span></div>
+    <div class="card"><img src="images/unchained.svg" alt="unchained" class="svg-icon"><span></span></div>
+    <div class="card"><img src="images/anchorwatch.svg" alt="anchorwatch" class="svg-icon"><span></span></div>
       </div>
     </section>
 	  
 	      <!-- Run Node Section -->
     <section class="category">
 	 <div class="category-header">
-   <h2><a href="financial-tools.html">Invest it</a></h2>
+   <h2><a href="financial-tools.html">Run my own node</a></h2>
 	  <button class="compare-btn" disabled>compare</button>
 	 </div>
       <div class="scrollable-container" id="node-section">
-		<div class="card"><img src="images/fold.svg" alt="fold" class="svg-icon"><span></span></div>
-        <div class="card"><img src="images/unchained.svg" alt="unchained" class="svg-icon"><span></span></div>
-        <div class="card"><img src="images/anchorwatch.svg" alt="anchorwatch" class="svg-icon"><span></span></div>
-        <div class="card"><img src="images/geyser.svg" alt="geyser" class="svg-icon"><span></span></div>
-	    <div class="card"><img src="images/hoseki.svg" alt="hoseki" class="svg-icon"><span></span></div> 
+        <div class="card"><img src="images/umbrel.svg" alt="umbrel" class="svg-icon"><span></span></div>
+        <div class="card"><img src="images/mynode.svg" alt="mynode" class="svg-icon"><span></span></div>
+        <div class="card"><img src="images/start9.svg" alt="start9" class="svg-icon"><span></span></div>
       </div>
     </section>
 	  
