changed html file names

--- a/accept-bitcoin-as-a-merchant.html
+++ b/accept-bitcoin-as-a-merchant.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spending Wallets</title>
+  <title>Accept Bitcoin as a merchant</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
@@ -72,17 +72,16 @@
 	</nav>
 </header>
   <main>
-    <!-- Purchase Bitcoin Section -->
+    <!-- Saving Bitcoin Section -->
     <section class="category">
      <div class="category-header">
-  		<h2>Spending Wallets</h2>
+  		<h2>Accept Bitcoin as a merchant</h2>
   		<button id="compare-btn" class="compare-btn" disabled>compare</button>
 	 </div>
       <div class="grid-container">
-        <div class="card"><img src="images/breez.svg" alt="breez" class="svg-icon"><span></span></div>
-        <div class="card"><img src="images/aqua.svg" alt="aqua" class="svg-icon"><span></span></div>
-        <div class="card"><img src="images/muun.svg" alt="muun" class="svg-icon"><span></span></div>
-		    <div class="card"><img src="images/phoenix.svg" alt="phoenix" class="svg-icon"><span></span></div>
+        <div class="card"><img src="images/btc-pay.svg" alt="BTC pay" class="svg-icon"><span></span></div>
+        <div class="card"><img src="images/opennode.svg" alt="opennode" class="svg-icon"><span></span></div>
+        <div class="card"><img src="images/lightspark.svg" alt="lightspark" class="svg-icon"><span></span></div>
 	  </div>
     </section>
   </main>
