--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!-- Spend Bitcoin Section -->
     <section class="category">
 	<div class="category-header">
-      <h2><a href="spending-wallets.html">Spend Bitcoin</a></h2>
+      <h2><a href="spend-bitcoin.html">Spend Bitcoin</a></h2>
 	  <button class="compare-btn" disabled>compare</button>
 	</div>
    	  <div class="scrollable-container" id="pay-receive-bitcoin">
@@ -148,7 +148,7 @@
     <!-- Store Safely Section -->
     <section class="category">
 	 <div class="category-header">
-   <h2><a href="saving-wallets.html">Store it safely</a></h2>
+   <h2><a href="store-it-safely.html">Store it safely</a></h2>
 	  <button class="compare-btn" disabled>compare</button>
 	 </div>
     	<div class="scrollable-container" id="store-bitcoin">
@@ -163,7 +163,7 @@
 	      <!-- Run Node Section -->
     <section class="category">
 	 <div class="category-header">
-   <h2><a href="financial-tools.html">Run my own node</a></h2>
+   <h2><a href="run-my-own-node.html">Run my own node</a></h2>
 	  <button class="compare-btn" disabled>compare</button>
 	 </div>
       <div class="scrollable-container" id="node-section">
@@ -176,7 +176,7 @@
 	<!-- Merchant Section -->
     <section class="category">
 	 <div class="category-header">
-    <h2><a href="merchants.html">Accept Bitcoin as a merchant</a></h2>
+    <h2><a href="accept-bitcoin-as-a-merchant.html">Accept Bitcoin as a merchant</a></h2>
 	  <button class="compare-btn" disabled>compare</button>
 	 </div>
       <div class="scrollable-container" id="merchant-section">
