--- a/run-my-own-node.html
+++ b/run-my-own-node.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Saving Wallets</title>
+  <title>Run my own node</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
@@ -75,18 +75,14 @@
     <!-- Saving Bitcoin Section -->
     <section class="category">
      <div class="category-header">
-  		<h2>Saving Wallets</h2>
+  		<h2>Run my own node</h2>
   		<button id="compare-btn" class="compare-btn" disabled>compare</button>
 	 </div>
-   <h3>Beginner</h3>
       <div class="grid-container">
-        <div class="card"><img src="images/bitkey.svg" alt="bitkey" class="svg-icon"><span></span></div>
-	  </div>
-    <h3>Advanced</h3>
-    <div class="grid-container">
-		<div class="card"><img src="images/wasabi.svg" alt="wasabi" class="svg-icon"><span></span></div>
-		<div class="card"><img src="images/sparrow.svg" alt="sparrow" class="svg-icon"><span></span></div>
-	  </div>
+        <div class="card"><img src="images/umbrel.svg" alt="umbrel" class="svg-icon"><span></span></div>
+        <div class="card"><img src="images/mynode.svg" alt="mynode" class="svg-icon"><span></span></div>
+        <div class="card"><img src="images/start9.svg" alt="start9" class="svg-icon"><span></span></div>
+      </div>
     </section>
   </main>
 </div>  <!-- container -->
