--- a/what-is-lightning.html
+++ b/what-is-lightning.html
@@ -109,7 +109,7 @@
   <h2>How to Get Started With Lightning</h2>
   <ol>
     <li><strong>Download a Lightning Wallet</strong><br>
-      Choose a wallet that supports Lightning. You can find several <a href="spending-wallets.html" target="_blank">here.</a></li>
+      Choose a wallet that supports Lightning. You can find several <a href="spend-bitcoin.html" target="_blank">here.</a></li>
     </li>
     <li><strong>Fund It With Bitcoin</strong><br>
       You can buy Bitcoin from an exchange and send it to your wallet.</li>
