--- a/spend-bitcoin.html
+++ b/spend-bitcoin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Financial Tools</title>
+  <title>Spend Bitcoin</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
@@ -72,18 +72,18 @@
 	</nav>
 </header>
   <main>
-    <!-- Saving Bitcoin Section -->
+    <!-- Purchase Bitcoin Section -->
     <section class="category">
      <div class="category-header">
-  		<h2>Financial Tools</h2>
+  		<h2>Spend Bitcoin</h2>
   		<button id="compare-btn" class="compare-btn" disabled>compare</button>
 	 </div>
       <div class="grid-container">
+        <div class="card"><img src="images/breez.svg" alt="breez" class="svg-icon"><span></span></div>
+        <div class="card"><img src="images/aqua.svg" alt="aqua" class="svg-icon"><span></span></div>
+        <div class="card"><img src="images/muun.svg" alt="muun" class="svg-icon"><span></span></div>
+		    <div class="card"><img src="images/phoenix.svg" alt="phoenix" class="svg-icon"><span></span></div>
         <div class="card"><img src="images/fold.svg" alt="fold" class="svg-icon"><span></span></div>
-        <div class="card"><img src="images/unchained.svg" alt="unchained" class="svg-icon"><span></span></div>
-        <div class="card"><img src="images/anchorwatch.svg" alt="anchorwatch" class="svg-icon"><span></span></div>
-        <div class="card"><img src="images/geyser.svg" alt="geyser" class="svg-icon"><span></span></div>
-	    <div class="card"><img src="images/hoseki.svg" alt="hoseki" class="svg-icon"><span></span></div> 
 	  </div>
     </section>
   </main>
