--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FAQ</title>
+  <title>FAQ - Frequently Asked Questions about Buoy Bitcoin</title>
+  <meta name="description" content="Frequently Asked Questions about Buoy Bitcoin."/>
+  <link rel="canonical" href="https://buoybitcoin.com/faq.html"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://buoybitcoin.com/faq.html"/>
+  <meta property="og:title" content="FAQ"/>
+  <meta property="og:description" content="Frequently Asked Questions about Buoy Bitcoin."/>
+  <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:title" content="FAQ"/>
+  <meta name="twitter:description" content="Frequently Asked Questions about Buoy Bitcoin."/>
+  <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
+  <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
@@ -12,7 +24,7 @@
   <div class="container">
  <header>
   <div class="container">
-    <div id="logo"><a href="index.html"><img src="images/buoy-logo-horizontal.svg" alt="buoy"></a></div>
+    <div id="logo"><a href="index.html"><img src="images/buoy-logo-horizontal.svg" alt="Buoy Bitcoin logo"></a></div>
     <button class="hamburger" aria-label="Toggle Menu">
       <span></span>
       <span></span>
@@ -116,7 +128,7 @@
       <h3>Social</h3>
       <ul>
         <li><a href="#">Nostr</a></li>
-		<li><a href="#">X</a></li>
+		<li><a href="https://x.com/jaspervanderee">X</a></li>
       </ul>
     </div>
     <div class="footer-column">
@@ -141,6 +153,86 @@
 
   <script src="js/script.js"></script>
   <script src="js/compare.js"></script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What is Buoy Bitcoin?",
+          "acceptedAnswer": {
+           "@type": "Answer",
+          "text": "Buoy Bitcoin is your guide into the Bitcoin ecosystem. We compare Bitcoin-only services like wallets, exchanges, and tools so users can make informed choices."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Why should I use Buoy?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We provide side-by-side comparisons of Bitcoin services based on key metrics like fees, KYC requirements, platform type, custody model, and more. This helps you save time and make confident decisions."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Does Buoy cover services for beginners?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Absolutely. Buoy is designed with beginners in mind. Whether you're looking for your first wallet or considering advanced tools like multisig storage, we provide clear information for all levels."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Is Buoy affiliated with any service providers?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "No. Buoy is an independent, unbiased platform. Our focus is on delivering transparent information to empower Bitcoin users."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you cover non-Bitcoin services or altcoins?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "No. Buoy is dedicated exclusively to Bitcoin and its ecosystem. We believe in staying focused on what makes Bitcoin unique."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Are the services you list safe to use?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We provide key details like custody models, KYC requirements, and user reviews to help you assess each service. Ultimately, users should do their own due diligence before using any service."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How often do you update the service information?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We aim to keep our information up-to-date with the latest offerings, updates, and feedback from the Bitcoin community. If you spot outdated information, please let us know!"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can I suggest a service for inclusion on Buoy?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes! We welcome suggestions. Use the contact form to share a service you'd like us to review and include."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How does Buoy make money?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Currently, Buoy is a free tool for the community. We may explore sustainable revenue options like sponsorships or partnerships, but we will always prioritize neutrality and transparency."
+          }
+        }
+      ]
+    }
+    </script>
 </body>
 </html>
 
