--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buoy Bitcoin</title>
+  <title>Buoy Bitcoin - Compare Bitcoin-only services quickly</title>
+  <meta name="description" content="Buoy Bitcoin helps you compare reliable Bitcoin-only services quickly and easily. Find the best options for wallets, exchanges, and more."/>
+  <link rel="canonical" href="https://buoybitcoin.com/"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://buoybitcoin.com/"/>
+  <meta property="og:title" content="Buoy Bitcoin"/>
+  <meta property="og:description" content="Buoy Bitcoin helps you compare reliable Bitcoin-only services quickly and easily. Find the best options for wallets, exchanges, and more."/>
+  <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:title" content="Buoy Bitcoin"/>
+  <meta name="twitter:description" content="Buoy Bitcoin helps you compare reliable Bitcoin-only services quickly and easily. Find the best options for wallets, exchanges, and more."/>
+  <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
+  <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="css/styles.css?v=7">
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
@@ -12,7 +24,7 @@
   <div class="container">
  <header>
   <div class="container">
-    <div id="logo"><a href="index.html"><img src="images/buoy-logo-horizontal.svg" alt="buoy"></a></div>
+    <div id="logo"><a href="index.html"><img src="images/buoy-logo-horizontal.svg" alt="Buoy Bitcoin logo"></a></div>
     <button class="hamburger" aria-label="Toggle Menu">
       <span></span>
       <span></span>
@@ -193,7 +205,7 @@
       <h3>Social</h3>
       <ul>
         <li><a href="#">Nostr</a></li>
-		<li><a href="#">X</a></li>
+		<li><a href="https://x.com/jaspervanderee">X</a></li>
       </ul>
     </div>
     <div class="footer-column">
@@ -216,7 +228,16 @@
   </div>
 </footer>
 
-
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Buoy Bitcoin",
+    "url": "https://buoybitcoin.com/",
+    "logo": "https://buoybitcoin.com/android-chrome-512x512.png",
+    "description": "Buoy Bitcoin helps you compare reliable Bitcoin-only services quickly and easily. Find the best options for wallets, exchanges, and more."
+  }
+  </script>
   <script src="js/script.js?v=8"></script>
 </body>
 </html>
