--- a/buy-bitcoin.html
+++ b/buy-bitcoin.html
@@ -3,7 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buy Bitcoin</title>
+  <title>Buy Bitcoin - Find the Best Places to Buy Bitcoin Securely and Easily</title>
+  <meta name="description" content="Find the best places to buy Bitcoin securely and easily."/>
+  <link rel="canonical" href="https://buoybitcoin.com/buy-bitcoin.html"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://buoybitcoin.com/buy-bitcoin.html"/>
+  <meta property="og:title" content="Buy Bitcoin"/>
+  <meta property="og:description" content="Find the best places to buy Bitcoin securely and easily."/>
+  <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:title" content="Buy Bitcoin"/>
+  <meta name="twitter:description" content="Find the best places to buy Bitcoin securely and easily."/>
+  <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
+  <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
@@ -12,7 +24,7 @@
   <div class="container">
 <header>
 	  <div class="container">
-		<div id="logo"><a href="index.html"><img src="images/buoy-logo-horizontal.svg" alt="buoy"></a></div>
+		<div id="logo"><a href="index.html"><img src="images/buoy-logo-horizontal.svg" alt="Buoy Bitcoin logo"></a></div>
 		<button class="hamburger" aria-label="Toggle Menu">
 		  <span></span>
 		  <span></span>
@@ -102,7 +114,7 @@
       <h3>Social</h3>
       <ul>
         <li><a href="#">Nostr</a></li>
-		<li><a href="#">X</a></li>
+		<li><a href="https://x.com/jaspervanderee">X</a></li>
       </ul>
     </div>
     <div class="footer-column">
