--- a/terms.html
+++ b/terms.html
@@ -19,6 +19,18 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
+  <script defer src="https://feedback.fish/ff.js?pid=17f299e6843396"></script>
+  <!-- Hotjar Tracking Code for https://buoybitcoin.com/ -->
+  <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:6475919,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+  </script>
 </head>
 <body>
   <div class="container">
@@ -71,6 +83,12 @@
   <a href="#donate" id="donate-link">
     <img src="images/lightning.svg" alt="Donate Icon" />
     Donate
+  </a>
+</li>
+<li>
+  <a data-feedback-fish href="javascript:void(0)">
+    <img src="images/feedback.svg" alt="Feedback Icon" />
+    Give us feedback
   </a>
 </li>
 <li>
