Bug on FAQ.html fixed: donate button now working

--- a/faq.html
+++ b/faq.html
@@ -105,7 +105,7 @@
 
 </header>
 <main class="space">
-      <section class="category">
+      <section>
           <h1>Frequently Asked Questions</h1>
         <div class="faq-content">
           <h2>What is Buoy?</h2>
@@ -169,8 +169,7 @@
   </div>
 </footer>
 
-  <script src="js/script.js"></script>
-  <script src="js/compare.js"></script>
+  <script src="js/script.js?v=8"></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
