added Umami analytics: privacy focused

--- a/privacy.html
+++ b/privacy.html
@@ -20,6 +20,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
   <script defer src="https://feedback.fish/ff.js?pid=17f299e6843396"></script>
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="0895676a-bb0e-488d-9381-a27cf9cf5888"></script>
 </head>
 <body>
   <div class="container">
@@ -111,7 +112,7 @@
     <h2>2. Use of Cookies and Analytics</h2>
     <p>We use cookies and similar technologies to enhance functionality, remember your preferences, and analyze traffic. You can control cookies through your browser settings.</p>
     <p><strong>Third-Party Tools:</strong><br>
-    We may use privacy-focused analytics tools (e.g., Plausible or Fathom) to avoid invasive tracking. No data is sold or shared for advertising purposes.</p>
+    We use Umami for privacy-focused analytics, which collects anonymized, aggregate data (e.g., page views, device types) without tracking individuals or using cookies. For user feedback, we use Feedback Fish, which only collects data you voluntarily submit (e.g., messages or screenshots) and does not track you across sessions. No data is sold or shared for advertising purposes.</p>
 
     <h2>3. How We Use Your Information</h2>
     <ul>
