renamed Github repository

--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
       <h3>Social</h3>
       <ul>
         <li><a href="#">Nostr</a></li>
-		<li><a href="https://x.com/jaspervanderee">X</a></li>
+		    <li><a href="https://x.com/jaspervanderee">X</a></li>
+        <li><a href="https://github.com/jaspervanderee/buoy">GitHub</a></li>
       </ul>
     </div>
     <div class="footer-column">
