GitHub url added

--- a/what-is-bitcoin.html
+++ b/what-is-bitcoin.html
@@ -152,6 +152,7 @@ The Bitcoin network has never been hacked. You control your Bitcoin with your ow
       <ul>
         <li><a href="#">Nostr</a></li>
 		<li><a href="https://x.com/jaspervanderee">X</a></li>
+        <li><a href="https://github.com/jaspervanderee/buoy" target="_blank">GitHub</a></li>
       </ul>
     </div>
     <div class="footer-column">
