--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <ul>
         <li><a href="#">Nostr</a></li>
 		    <li><a href="https://x.com/jaspervanderee">X</a></li>
-        <li><a href="https://github.com/jaspervanderee/buoy">GitHub</a></li>
+        <li><a href="https://github.com/jaspervanderee/buoy" target="_blank">GitHub</a></li>
       </ul>
     </div>
     <div class="footer-column">
