Changed h2 tags to h1 for SEO

--- a/about.html
+++ b/about.html
@@ -115,6 +115,9 @@
         <li>We provide clear side-by-side comparisons for faster, better decisions.</li>
       </ul>
 
+      <h2>Our Principles: Objectivity and Transparency</h2>
+      <p>We remain fully independent, with no affiliations or sponsorships influencing our recommendations. Our comparisons are based on transparent, verifiable criteria like open-source code, privacy protections, and user sovereignty—core to Bitcoin's ethos of decentralization and self-reliance. All data is openly sourced, and we welcome community feedback to ensure accuracy.</p>
+
       <h2>Our Commitment</h2>
       <p>Whether you're a beginner or a seasoned Bitcoiner, Buoy is here to help. We’re building for the long term, driven by feedback and Bitcoin values.</p>
 
