--- a/faq.html
+++ b/faq.html
@@ -110,6 +110,9 @@
           <h2>Is Buoy affiliated with any service providers?</h2>
           <p>No. Buoy is an independent, unbiased platform. Our focus is on delivering transparent information to empower Bitcoin users.</p>
 
+          <h2>How does Buoy ensure objectivity and transparency in comparisons?</h2>
+          <p>We use clear, publicly verifiable criteria for all comparisons, focusing on Bitcoin-aligned factors like decentralization, privacy, and open-source status. As an independent platform, we avoid conflicts of interest and encourage community input to maintain trust and accuracy.</p>
+
           <h2>Do you cover non-Bitcoin services or altcoins?</h2>
           <p>No. Buoy is dedicated exclusively to Bitcoin and its ecosystem. We believe in staying focused on what makes Bitcoin unique.</p>
 
@@ -196,6 +199,14 @@
           "acceptedAnswer": {
             "@type": "Answer",
             "text": "No. Buoy is an independent, unbiased platform. Our focus is on delivering transparent information to empower Bitcoin users."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How does Buoy ensure objectivity and transparency in comparisons?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We use clear, publicly verifiable criteria for all comparisons, focusing on Bitcoin-aligned factors like decentralization, privacy, and open-source status. As an independent platform, we avoid conflicts of interest and encourage community input to maintain trust and accuracy."
           }
         },
         {
