--- a/privacy.html
+++ b/privacy.html
@@ -124,6 +124,7 @@
 
     <h2>4. Third-Party Access</h2>
     <p>We may work with trusted service providers (e.g., email delivery or analytics) under strict confidentiality agreements. They are only allowed to use your information to perform the specific services we request.</p>
+    <p>As detailed in our Cookies and Analytics section, we partner with privacy-focused providers like Umami (for anonymized analytics) and Feedback Fish (for voluntary user feedback) under these agreements. No data is sold or shared for advertising.</p>
 
     <h2>5. Data Security</h2>
     <p>We use industry-standard measures to protect your data. However, no method of transmission over the Internet is 100% secure.</p>
