Search bar selecting multiple services

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
   </div>
   <button id="search-btn">Search</button>
 </div>
+<div id="menu-selected-services" class="selected-services"></div>
+<button id="menu-compare-btn" class="compare-btn">Compare</button>
 
     <!-- Menu sections -->
     <section class="menu-section">
@@ -107,6 +109,8 @@
     </button>
     <div id="main-search-suggestions" class="search-suggestions"></div>
   </div>
+  <div id="main-selected-services" class="selected-services"></div>
+  <button id="main-compare-btn" class="compare-btn">compare</button>
 </section>
 
 <section class="action-grid">
