--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
     <input type="text" placeholder="Search..." id="menu-search" />
     <div id="search-suggestions" class="search-suggestions"></div>
   </div>
-  <button id="search-btn">Search</button>
+  <button id="menu-compare-btn" class="compare-btn">compare</button>
 </div>
 <div id="menu-selected-services" class="selected-services"></div>
-<button id="menu-compare-btn" class="compare-btn">Compare</button>
 
     <!-- Menu sections -->
     <section class="menu-section">
