Newletter form email subscription added

--- a/index.html
+++ b/index.html
@@ -211,6 +211,15 @@
   </main>
 </div>  <!-- container -->
 <footer>
+  <div class="newsletter-signup">
+    <h3>Get Bitcoin updates and tips in your inbox every month</h3>
+    <form id="newsletter-form">
+      <input type="email" id="newsletter-email" name="email" placeholder="you@your-email.com" required>
+      <button type="submit">Subscribe</button>
+    </form>
+    <div id="newsletter-message" style="display:none;"></div>
+    <div id="newsletter-sending" style="display:none;">Sending...</div>
+  </div>
   <div class="footer-container">
     <div class="footer-column">
       <h3>Social</h3>
